attempts to fix extra space that appears in mobile safari on nav and footer when rotating from portrait to landscape

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,13 +5,17 @@
     --white: #FFFFFF;
     --black: #000000;
 }
+html {
+    padding: env(safe-area-inset);
+}
 
 body {
     width: 100%;
     max-width: 100vw;
     margin: 0;
     overflow-x: hidden;
-    font-size: max(1.4rem, 1.1rem);
+    /* font-size: max(1.4rem, 1.1rem); */
+    font-size: 1.4rem;
     background-color: var(--grey);
     background-repeat: no-repeat;
     display: flex;
@@ -21,6 +25,7 @@ body {
 
 nav {
     width: 100%;
+    min-width: 100vw;
     margin: 0;
     padding: 0;
     background-color: var(--white);
